[metadata]
name = tccm
description = 'Terminology Core Common Model'
version = 1.2.6
url = https://github.com/hot-ecosystem/tccm
author = Harold Solbrig; Dazhi Jiao
author-email = solbrig@jhu.edu; djiao@jhu.edu
summary = Terminology Core Common Model
home-page = https://hot-ecosystem.github.io/tccm/
license = CC0 1.0 Universal
python-requires = >=3.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Health-Informatics
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    TCCM
    Terminology
    Datamodel
    Health

[files]
packages =
    tccm
